[package]
name = "lsplt-example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lsplt"
path = "src/main.rs"

[dependencies]
lsplt-rs = { path = "../", version = "*" }
log = "^0.4.28"
log4rs = "1.4.0"
libc = "^0.2"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
debuginfo = 0       # Disable debug info
incremental = true
