[package]
name = "lsplt-sys"
version = "2.1.2"
edition = "2021"
license = "LGPL-3.0-only"
authors = ["qwq233 <rust@qwq2333.top>"]
description = "A Rust binding for LSPlt"

repository = "https://github.com/qwq233/lsplt-rs"
keywords = ["hook", "plt", "lsplt", "plthook"]

[build-dependencies]
bindgen = "^0.72.1"

[dependencies]
